--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <span>YouTube</span>
                 </a>
               </div>
-              
+              <script src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js" type="text/javascript"></script>
             </div>
         </div>
     </div>
